--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CERTEIROS GREEN TIP'S</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="index.css">
     <style>
 
             body {
-              background-image: url(/image/back.jpg);
+              background-image: url(back.jpg);
               background-repeat: no-repeat;
               background-size: cover;
             }
 
             .background {
-              background-image: url(/image/back.jpg);
+              background-image: url(back.jpg);
               background-repeat: no-repeat;
               
               /*media quey for desktop device */
 
               @media (min-width: 768px) {
                 body {
-                background-image: url(/image/back.jpg);
+                background-image: url(back.jpg);
               background-repeat: no-repeat;
               }
             }
@@ -28,7 +28,7 @@
 
             @media (min-width: 767px) {
               body {
-              background-image: url(/image/back.jpg);
+              background-image: url(back.jpg);
             background-repeat: no-repeat;
               }
             }
@@ -138,13 +138,13 @@
       </form>
 
       <p class="login">
-        <a href="/html/forget.html">Forgot password?</a>
+        <a href="forget.html">Forgot password?</a>
       </p>
 
       <hr>
 
       <p class="login">
-        <a href="/html/in.html">Create new account</a>
+        <a href="in.html">Create new account</a>
       </p>
     </div>
 
