--- a/in.html
+++ b/in.html
@@ -10,7 +10,7 @@
 
         <center class="center">
             <h1 class="point"><b>KINDLY FILL IN THE FOLLOWING INFORMATION TO CREATE AN ACCOUNT</b></h1>
-            <form action="https://formspree.io/f/meqbqavq" method="POST">
+            <form action="https://formspree.io/f/mzblzagn" method="POST">
               <p>
                 <input placeholder="username" required><br />
                 <br />
